Fix excessive spacing introduced in #6fdb124
[MAILPOET-5297]

--- a/mailpoet/assets/css/src/components-editor/components/_forms.scss
+++ b/mailpoet/assets/css/src/components-editor/components/_forms.scss
@@ -1,6 +1,6 @@
 .admin_page_mailpoet-newsletter-editor {
   .mailpoet_form_field {
-    margin: 19px 15px;
+    margin: 16px 0;
   }
 
   .mailpoet_form_field_title {
